--- a/Biblio/biblio.tex
+++ b/Biblio/biblio.tex
@@ -6,6 +6,37 @@
 \usepackage{authordate1-4}
 \nonstopmode
 \begin{document}
+\nocite{Baker-Harman-Pintz*01}
+\nocite{Wolke*83}
+\nocite{Schoenfeld*76}
+\nocite{Cramer*36}
+\nocite{Selberg*43}
+\nocite{Schoenfeld*76}
+\nocite{Wedeniwski*02}
+\nocite{Gourdon-Demichel*04}
+\nocite{Lune-Riele-Winter*86}
+\nocite{Saouter-Demichel*10}
+\nocite{Wedeniwski*02}
+\nocite{Gourdon-Demichel*04}
+\nocite{Ramare-Saouter*02}
+\nocite{Ramare-Saouter*02}
+\nocite{Gourdon-Demichel*04}
+\nocite{Nicely*99}
+\nocite{Young-Potler*89}
+\nocite{Trudgian*16}
+\nocite{Dusart*16}
+\nocite{Maurer*95}
+\nocite{Deshouillers-teRiele-Saouter*98}
+\nocite{Brillhart-Lehmer-Selfridge*75}
+\nocite{Jaeschke*93}
+\nocite{CostaPereira*89}
+\nocite{Dudek*16b}
+\nocite{Cully*21}
+\nocite{Dudek*15}
+\nocite{Carneiro-Milinovich-Soundararajan*19}
+\nocite{McCurley*84-2}
+\nocite{McCurley*84-3}
+\nocite{Kadiri*05-2}
 \nocite{Louboutin*93}
 \nocite{Louboutin*96}
 \nocite{Granville-Soundararajan*02}
@@ -49,37 +80,69 @@
 \nocite{Ramare*13d}
 \nocite{Delange*87}
 \nocite{Ford*01}
-\nocite{Baker-Harman-Pintz*01}
-\nocite{Wolke*83}
-\nocite{Schoenfeld*76}
-\nocite{Cramer*36}
-\nocite{Selberg*43}
-\nocite{Schoenfeld*76}
-\nocite{Wedeniwski*02}
-\nocite{Gourdon-Demichel*04}
-\nocite{Lune-Riele-Winter*86}
-\nocite{Saouter-Demichel*10}
-\nocite{Wedeniwski*02}
-\nocite{Gourdon-Demichel*04}
-\nocite{Ramare-Saouter*02}
-\nocite{Ramare-Saouter*02}
-\nocite{Gourdon-Demichel*04}
-\nocite{Nicely*99}
-\nocite{Young-Potler*89}
-\nocite{Trudgian*16}
-\nocite{Dusart*16}
-\nocite{Maurer*95}
-\nocite{Deshouillers-teRiele-Saouter*98}
-\nocite{Brillhart-Lehmer-Selfridge*75}
-\nocite{Jaeschke*93}
+\nocite{Diamond-Erdos*80}
+\nocite{Deleglise-Rivat*96-2}
+\nocite{Borwein-Ferguson-Mossinghoff*08}
+\nocite{VonSterneck*98}
+\nocite{MacLeod*69}
+\nocite{Dress*83}
 \nocite{CostaPereira*89}
-\nocite{Dudek*16b}
-\nocite{Cully*21}
-\nocite{Dudek*15}
-\nocite{Carneiro-Milinovich-Soundararajan*19}
-\nocite{McCurley*84-2}
-\nocite{McCurley*84-3}
-\nocite{Kadiri*05-2}
+\nocite{Dress-ElMarraki*93}
+\nocite{Dress*93}
+\nocite{Kotnik-VanDeLune*04}
+\nocite{Hurst*18}
+\nocite{Cohen-Dress*88}
+\nocite{Cohen-Dress-ElMarraki*96}
+\nocite{Cohen-Dress-ElMarraki*07}
+\nocite{Dress*99}
+\nocite{Schoenfeld*69}
+\nocite{ElMarraki*95}
+\nocite{Ramare*12-2}
+\nocite{Ramare*12-5}
+\nocite{MacLeod*69}
+\nocite{Granville-Ramare*96}
+\nocite{Davenport*37-1}
+\nocite{Ramare*12-5}
+\nocite{Ramare*12-4}
+\nocite{ElMarraki*96}
+\nocite{Bordelles*15}
+\nocite{Ramare*12-2}
+\nocite{Ramare*12-5}
+\nocite{Balazard*12}
+\nocite{Ramare*12-3}
+\nocite{Ramare*12-5}
+\nocite{vonSterneck*02}
+\nocite{Ramare*12-5}
+\nocite{Trevino*15}
+\nocite{Bordelles*15}
+\nocite{Robin*83-1}
+\nocite{Nicolas-Robin*83}
+\nocite{Robin*83-0}
+\nocite{Duras*93}
+\nocite{Duras-Nicolas-Robin*99}
+\nocite{Nicolas*08}
+\nocite{Ivic*77}
+\nocite{Eum-Koo*15}
+\nocite{Washington-Yang*21}
+\nocite{Montgomery-Vaughan*74}
+\nocite{Montgomery-Vaughan*73}
+\nocite{Louboutin*00}
+\nocite{Louboutin*01}
+\nocite{Ramare*01}
+\nocite{Ramare*01}
+\nocite{Pohst-Zassenhaus*89}
+\nocite{Bordelles*02}
+\nocite{Bordelles*06}
+\nocite{Cully-Trudgian*21}
+\nocite{Louboutin*05}
+\nocite{Louboutin*05}
+\nocite{Louboutin*00}
+\nocite{Louboutin*03}
+\nocite{Louboutin*03}
+\nocite{Louboutin*03}
+\nocite{Deleglise-Rivat*96-1}
+\nocite{Deleglise-Rivat*98}
+\nocite{Platt*11}
 \nocite{Dusart*98}
 \nocite{Dusart*07}
 \nocite{Rosser-Schoenfeld*62}
@@ -133,15 +196,6 @@
 \nocite{Ramare*02}
 \nocite{Bach-Sorenson*96}
 \nocite{Kadiri*05-2}
-\nocite{Robin*83-1}
-\nocite{Nicolas-Robin*83}
-\nocite{Robin*83-0}
-\nocite{Duras*93}
-\nocite{Duras-Nicolas-Robin*99}
-\nocite{Nicolas*08}
-\nocite{Ivic*77}
-\nocite{Eum-Koo*15}
-\nocite{Washington-Yang*21}
 \nocite{Ramare*95}
 \nocite{Berment-Ramare*12}
 \nocite{Ramare*95}
@@ -163,7 +217,9 @@
 \nocite{CostaPereira*89}
 \nocite{Moser-MacLeod*66}
 \nocite{Cohen-Dress-ElMarraki*07}
+\nocite{Ramare*18-9}
 \nocite{Ramare*13d}
+\nocite{Ramare*18-9}
 \nocite{Schoenfeld*69}
 \nocite{Berkane-Bordelles-Ramare*11}
 \nocite{Deshouillers-Dress*88}
@@ -178,6 +234,8 @@
 \nocite{Cipu*15-1}
 \nocite{Trevino*15-2}
 \nocite{Ramare*14-1}
+\nocite{Ramare*13a}
+\nocite{Ramare*18-9}
 \nocite{Montgomery-Vaughan*73}
 \nocite{Ramare*95}
 \nocite{Ward*27}
@@ -226,25 +284,23 @@
 \nocite{Kadiri*13}
 \nocite{Ramare*13d}
 \nocite{Kadiri-Lumley-Ng*18}
-\nocite{Qiu*91}
-\nocite{Bachman-Rachakonda*01}
-\nocite{Frolenkov*11}
-\nocite{Frolenkov-Soundararajan*13}
-\nocite{Pomerance*11}
-\nocite{Landau*18-3}
-\nocite{Granville-Soundararajan*07}
-\nocite{Granville-Soundararajan*07}
-\nocite{Bordignon-Kerr*20}
-\nocite{Bordignon*21}
-\nocite{Trevino*15-2}
-\nocite{McGown*12}
-\nocite{Booker*06}
-\nocite{Jain-Sharma-Khale-Liu*21}
-\nocite{Deleglise-Rivat*96-1}
-\nocite{Deleglise-Rivat*98}
-\nocite{Platt*11}
-\nocite{Cazaran-Moree*99}
-\nocite{Moree*12}
+\nocite{Montgomery-Vaughan*73}
+\nocite{Buethe*14}
+\nocite{Ramare*13a}
+\nocite{Siebert*76}
+\nocite{Nathanson*96-2}
+\nocite{Fan*22}
+\nocite{Rademacher*59}
+\nocite{Trudgian*13}
+\nocite{Kadiri-Ng*12}
+\nocite{Trudgian*14-1}
+\nocite{Hasanalizade-Shen-Wong*21}
+\nocite{Kadiri*12}
+\nocite{Ahn-Kwon*14}
+\nocite{Louboutin*17}
+\nocite{Louboutin*15b}
+\nocite{Granville-Ramare*96}
+\nocite{Daboussi-Rivat*01}
 \nocite{Filaseta*90}
 \nocite{Filaseta-Trifonov*96}
 \nocite{Huxley*96}
@@ -263,66 +319,22 @@
 \nocite{Jarnik*25}
 \nocite{Swinnerton-Dyer*74}
 \nocite{Bombieri-Pila*89}
-\nocite{Louboutin*00}
-\nocite{Louboutin*01}
-\nocite{Ramare*01}
-\nocite{Ramare*01}
-\nocite{Pohst-Zassenhaus*89}
-\nocite{Bordelles*02}
-\nocite{Bordelles*06}
-\nocite{Cully-Trudgian*21}
-\nocite{Louboutin*05}
-\nocite{Louboutin*05}
-\nocite{Louboutin*00}
-\nocite{Louboutin*03}
-\nocite{Louboutin*03}
-\nocite{Louboutin*03}
-\nocite{Diamond-Erdos*80}
-\nocite{Deleglise-Rivat*96-2}
-\nocite{Borwein-Ferguson-Mossinghoff*08}
-\nocite{VonSterneck*98}
-\nocite{MacLeod*69}
-\nocite{Dress*83}
-\nocite{CostaPereira*89}
-\nocite{Dress-ElMarraki*93}
-\nocite{Dress*93}
-\nocite{Kotnik-VanDeLune*04}
-\nocite{Hurst*18}
-\nocite{Cohen-Dress*88}
-\nocite{Cohen-Dress-ElMarraki*96}
-\nocite{Cohen-Dress-ElMarraki*07}
-\nocite{Dress*99}
-\nocite{Schoenfeld*69}
-\nocite{ElMarraki*95}
-\nocite{Ramare*12-2}
-\nocite{Ramare*12-5}
-\nocite{MacLeod*69}
-\nocite{Granville-Ramare*96}
-\nocite{Davenport*37-1}
-\nocite{Ramare*12-5}
-\nocite{Ramare*12-4}
-\nocite{ElMarraki*96}
-\nocite{Bordelles*15}
-\nocite{Ramare*12-2}
-\nocite{Ramare*12-5}
-\nocite{Balazard*12}
-\nocite{Ramare*12-3}
-\nocite{Ramare*12-5}
-\nocite{vonSterneck*02}
-\nocite{Ramare*12-5}
-\nocite{Trevino*15}
-\nocite{Bordelles*15}
-\nocite{Granville-Ramare*96}
-\nocite{Daboussi-Rivat*01}
-\nocite{Rademacher*59}
-\nocite{Trudgian*13}
-\nocite{Kadiri-Ng*12}
-\nocite{Trudgian*14-1}
-\nocite{Hasanalizade-Shen-Wong*21}
-\nocite{Kadiri*12}
-\nocite{Ahn-Kwon*14}
-\nocite{Montgomery-Vaughan*74}
-\nocite{Montgomery-Vaughan*73}
+\nocite{Cazaran-Moree*99}
+\nocite{Moree*12}
+\nocite{Qiu*91}
+\nocite{Bachman-Rachakonda*01}
+\nocite{Frolenkov*11}
+\nocite{Frolenkov-Soundararajan*13}
+\nocite{Pomerance*11}
+\nocite{Landau*18-3}
+\nocite{Granville-Soundararajan*07}
+\nocite{Granville-Soundararajan*07}
+\nocite{Bordignon-Kerr*20}
+\nocite{Bordignon*21}
+\nocite{Trevino*15-2}
+\nocite{McGown*12}
+\nocite{Booker*06}
+\nocite{Jain-Sharma-Khale-Liu*21}
 \nocite{Ramare*07a}
 \nocite{Ramare*14-6}
 \nocite{Montgomery*94}
@@ -332,11 +344,6 @@
 \nocite{Ramare*13d}
 \nocite{Ramare*13d}
 \nocite{Gallagher*70}
-\nocite{Montgomery-Vaughan*73}
-\nocite{Buethe*14}
-\nocite{Siebert*76}
-\nocite{Nathanson*96-2}
-\nocite{Fan*22}
 \bibliographystyle{authordate1}
 \bibliography{Local-TME-EMT}
 
