--- a/GlobalBiblioFile/Global.bib
+++ b/GlobalBiblioFile/Global.bib
@@ -12329,6 +12329,23 @@ MRREVIEWER = {Don Redmond},
   File                     = {:/home/ramare/tex/Other/Kadiri/AA7329.pdf:PDF}
 }
 
+@article {Kadiri*18,
+    AUTHOR = {Kadiri, Habiba},
+     TITLE = {Explicit zero-free regions for {D}irichlet {$L$}-functions},
+   JOURNAL = {Mathematika},
+  FJOURNAL = {Mathematika. A Journal of Pure and Applied Mathematics},
+    VOLUME = {64},
+      YEAR = {2018},
+    NUMBER = {2},
+     PAGES = {445--474},
+      ISSN = {0025-5793},
+   MRCLASS = {11M26 (11M06)},
+  MRNUMBER = {3798607},
+MRREVIEWER = {Keiju Sono},
+       DOI = {10.1112/S0025579318000037},
+}
+		
+
 @Article{Kadiri*12,
   Title                    = {Explicit zero-free regions for {D}edekind zeta functions},
   Author                   = {H. Kadiri},
@@ -14002,6 +14019,55 @@ MRREVIEWER = {J. H. Jordan},
   Mrnumber                 = {2855723}
 }
 
+@article {Louboutin*17,
+    AUTHOR = {Louboutin, St\'{e}phane R.},
+     TITLE = {Simple zeros of {D}edekind zeta functions},
+   JOURNAL = {Funct. Approx. Comment. Math.},
+  FJOURNAL = {Uniwersytet im. Adama Mickiewicza w Poznaniu. Wydzia\l 
+              Matematyki i Informatyki. Functiones et Approximatio
+              Commentarii Mathematici},
+    VOLUME = {56},
+      YEAR = {2017},
+    NUMBER = {1},
+     PAGES = {109--116},
+      ISSN = {0208-6573},
+   MRCLASS = {11R42 (11R29)},
+  MRNUMBER = {3629014},
+MRREVIEWER = {Soun-Hi Kwon},
+       DOI = {10.7169/facm/1598}
+}
+@article {Louboutin*15b,
+    AUTHOR = {Louboutin, St\'{e}phane R.},
+     TITLE = {Real zeros of {D}edekind zeta functions},
+   JOURNAL = {Int. J. Number Theory},
+  FJOURNAL = {International Journal of Number Theory},
+    VOLUME = {11},
+      YEAR = {2015},
+    NUMBER = {3},
+     PAGES = {843--848},
+      ISSN = {1793-0421},
+   MRCLASS = {11R42 (11R29)},
+  MRNUMBER = {3327846},
+MRREVIEWER = {Soun-Hi Kwon},
+       DOI = {10.1142/S1793042115500463}
+}
+@article {Ramare*13a,
+    AUTHOR = {Ramar\'{e}, Olivier and Viswanadham, G. K.},
+     TITLE = {Modular ternary additive problems with irregular or prime
+              numbers},
+      NOTE = {English version published in Proc. Steklov Inst. Math.
+              {{\bf{3}}14} (2021), no. 1, 203--237},
+   JOURNAL = {Tr. Mat. Inst. Steklova},
+  FJOURNAL = {Trudy Matematicheskogo Instituta Imeni V. A. Steklova},
+    VOLUME = {314},
+      YEAR = {2021},
+    NUMBER = {Analiticheskaya i Kombinatornaya Teoriya Chisel},
+     PAGES = {211--247},
+      ISSN = {0371-9685},
+   MRCLASS = {11L20 (11L07 11N13)},
+  MRNUMBER = {4324091},
+       DOI = {10.4213/tm4191},
+}	
 @Article{Louboutin*13,
   Title                    = {An explicit lower bound on moduli of {D}ichlet {$L$}-functions at $s=1$},
   Author                   = {S. Louboutin},
@@ -17023,15 +17089,6 @@ MRREVIEWER = {Paul T. Bateman},
   MRNUMBER = {411},
 MRREVIEWER = {A. E. Ingham},
 }
-@Article{Ramare*13a,
-  Title                    = {Modular Ternary Additive Problems with Irregular or Prime Numbers},
-  Author                   = {O. {Ramar\'e} and G. K. Viswanadham},
-  Journal                  = {Proc. Steklov Inst. Math.},
-  Year                     = {2021},
-  Pages                    = {211-247},
-  Note ={Volume dedicated to I.M. Vinogradov},
-  Volume ={314}
-  }
 
 @Article{Ramare-Kasi*21b,
   Title                    = {Exponential sums over primes with multiplicative  coefficients},
