--- a/Latex/Art14.tex
+++ b/Latex/Art14.tex
@@ -40,6 +40,33 @@ See
 \cite{Buethe*14}
 for a generic weighted version of this inequality.
 
+Lemma 14 of
+\cite{Ramare*13a},
+the following extension of the above is proved.
+\par 
+\begin{thm}{Theorem (2021)}
+
+Let $x\ge y>k\ge 1$ be positive real numbers, $k$ being an integer. Then 
+$
+\displaystyle
+\sum_{\substack{x < m \le x+y\\ m\equiv a[k]}}\frac{\Lambda(m)}{\log m}
+<  \frac{2y}{\phi(k)\log (y/k)}.
+$
+\end{thm}
+
+And in Lemma 15 of the same paper, we find the next estimate.
+\par 
+\begin{thm}{Theorem (2021)}
+
+Let $x\ge \max(121,k^3)$. Then 
+$
+\displaystyle
+\sum_{\substack{x < m \le 2x\\ m\equiv a[k]}}\Lambda(m)
+<  \frac{9}{2}\frac{x}{\phi(k)}.
+$
+\end{thm}
+
+
 \par 
 Here is a bound concerning a sieve of dimension 2 proved by
 \cite{Siebert*76}.
