--- a/Latex/Art18.tex
+++ b/Latex/Art18.tex
@@ -81,10 +81,10 @@ In
 a zero-free region is proved.
 
 \par 
-\begin{thm}{Theorem (1959)}
+\begin{thm}{Theorem (2012)}
 
 Let $K$ be a number field of degree $n$ over $\mathbb{Q}$ and of
-discriminant $d \ge 2$. The associated Dedekind
+discriminant $d_K$ such that $|d_K| \ge 2$. The associated Dedekind
 zeta-function $\zeta_K$ has no zeros in the region
 $$
 \sigma\ge 1-\frac{1}{12.55\log|d_K|+n(9.69\log|t|+3.03)+58.63}, |t|\ge1
@@ -100,7 +100,53 @@ See
 \cite{Ahn-Kwon*14}
 for a result for Hecke $L$-series.
 
+In
 
+In
+\cite{Louboutin*17},
+a zero-free region is proved. Here is slightly simplified version of
+his result.
+
+\par 
+\begin{thm}{Theorem (2017)}
+
+Let $K$ be a number field of degree $n$ over $\mathbb{Q}$ and of
+discriminant $d_K$ such that $|d_K| \ge 8$. The associated Dedekind
+zeta-function $\zeta_K$ has no zeros in the regions
+$$
+\sigma\ge 1-\frac{1}{1.7\log|d_K|}, |t|\ge\frac{1}{4\log|d_K|},
+$$
+$$
+\sigma\ge 1-\frac{1}{2\log|d_K|}, |t|\ge\frac{1}{2\log|d_K|},
+$$
+and
+$$
+\sigma\ge 1-\frac{1}{1.62\log|d_K|}, t=0.
+$$
+\end{thm}
+
+
+
+\section{. Real Zeroes.}
+
+
+In
+\cite{Louboutin*15b},
+we find the next result.
+
+\par 
+\begin{thm}{Theorem (2015)}
+
+Let $m$ be a positive integer.
+  Let $K$ be a number field of degree $n$ over $\mathbb{Q}$ and of
+discriminant $d_K$ such that $|d_K|\ge
+\exp((5+\sqrt{5})(\sqrt{m+1}-1)^2)$.
+The associated Dedekind
+zeta-function $\zeta_K$ has at most $m$ real zeroes in
+$$
+\sigma\ge 1-\frac{(5+\sqrt{5})(\sqrt{m+1}-1)^2}{2\log|d_K|}.
+$$
+\end{thm}
 
 
 
@@ -109,7 +155,7 @@ for a result for Hecke $L$-series.
 
 
   
-\begin{flushright}\small\sl{}   Last updated on April 29th, 2022, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on December 26th, 2022, by Olivier Ramar\'e
  \end{flushright}
 
 
