--- a/Latex/Art10.tex
+++ b/Latex/Art10.tex
@@ -380,6 +380,22 @@ contains:
   $(0.1333, 1004)$, by $(1/2, 8)$ or by $(1,1)$.
 \end{thm}
 
+This estimate is (slightly) improved in
+Corollary 3.4 of
+\cite{Ramare*18-9}
+in the next one.
+
+\par 
+\begin{thm}{Theorem (2018)}
+
+  When $x > 1$, we have
+$$
+\sum_{n\le x}\mu^2(n)
+=\frac{6}{\pi^2}x
++O^*(1.06\sqrt{x/\log x}).
+  $$
+\end{thm}
+
 
 
 
@@ -396,15 +412,24 @@ $\frac{6}{\pi^2}\log x+0.578\le \sum_{n\le x}\mu^2(n)/n\le \frac{6}{\pi^2}\log x
 When $x\ge1000$, one can also replace the couple $(0.578, 1.166)$ by $(1.040, 1.048)$.
 \end{thm}
 
-In fact, in the same paper, the asymptotic
+In Theorem 3.2 and Corollary 3.3 of
+\cite{Ramare*18-9},
+we find the next result.
+
+\par 
+\begin{thm}{Theorem (2018)}
+
+  When $x \ge 3475$, we have
 $$
 \sum_{n\le x}\frac{\mu^2(n)}{n}
 =\frac{6}{\pi^2}\Bigl(\log x+2\sum_{p\ge2}\frac{\log
 p}{p^2-1}+\gamma\Bigr)
-+O^*(3/x^{1/3})
-$$
-valid for $x\ge1$ is proved. A script using SAGE and another one using GP/PARI are then
-displayed to explain how to cover the initial range in $x$.
++O^*(0.073/\sqrt{x}).
+  $$
+  And when $x\ge 1665$, the error term may be (asymptotically) improved to
+  $O^*(0.35/\sqrt{x\log x})$.
+\end{thm}
+
 See also Lemma 1
 of \cite{Schoenfeld*69} for an
 earlier version.
@@ -597,17 +622,21 @@ Lemma 3 of the same paper is as follows.
 
 
 Several estimates are proved in
-\cite{Ramare*14-1}.
-For instance Theorem 1.2 gives the following.
+\cite{Ramare*14-1},
+\cite{Ramare*13a}
+and in
+\cite{Ramare*18-9}.
+
+For instance Theorem 3.1 in the latter paper contains the following.
 \par 
-\begin{thm}{Theorem (2017)}
+\begin{thm}{Theorem (2018)}
 
   Let $x\ge1$ be a real number. We have
   $\sum_{n\le x}\mu^2(n)/\phi(n)= \log x
-  +c_0+O^*(3.95/\sqrt{x})$ where $\displaystyle c_0=\gamma+\sum_{p\ge2}\frac{\log
+  +c_0+O^*(2.44/\sqrt{x})$ where $\displaystyle c_0=\gamma+\sum_{p\ge2}\frac{\log
   p}{p(p-1)}$.
   When $x > 1$, this $O^*$ can be replaced
-  by $O^*(21/\sqrt{x\log x})$. 
+  by $O^*(11/\sqrt{x\log x})$. 
 \end{thm}
 
 The function $\sum_{n\le x}\mu^2(n)/\phi(n)$ has been the subject of
@@ -673,8 +702,8 @@ proved that
 
 In \cite{Bordelles*05},
 the reader will find explicit upper bounds for $\displaystyle
-\prod_{\substack{p\le x,\\ p\equiv a[q]}}\Bigl(1-\frac{1}{p}\Bigr)^{-1}$
-
+\prod_{\substack{p\le x,\\ p\equiv a[q]}}\Bigl(1-\frac{1}{p}\Bigr)^{-1}$.
+\par 
 Theorem 5 of
 \cite{Vanlalnagaia*15-1}
 contains the next result.
@@ -706,7 +735,7 @@ gives an approximate value for $B$.
 
 
   
-\begin{flushright}\small\sl{}   Last updated on June 10th, 2019, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on December 26th, 2022, by Olivier Ramar\'e
  \end{flushright}
 
 
