--- a/Latex/Local-TME-EMT.bib
+++ b/Latex/Local-TME-EMT.bib
@@ -437,7 +437,17 @@ MRREVIEWER = {Alexey A. Panchishkin},
 MRREVIEWER = {Jack Buttcane},
        DOI = {10.1007/s11464-019-0749-9},
 }
-		
+@book {Jacobson-V1*75,
+    AUTHOR = {Jacobson, Nathan},
+     TITLE = {Lectures in abstract algebra. {V}ol. {I}},
+    SERIES = {Graduate Texts in Mathematics, No. 30},
+      NOTE = {Basic concepts, Reprint of the 1951 edition},
+ PUBLISHER = {Springer-Verlag, New York-Heidelberg},
+      YEAR = {1975},
+     PAGES = {xii+217},
+   MRCLASS = {00A05},
+  MRNUMBER = {0392227},
+}		
 @article {Lu-Guangshi*18,
     AUTHOR = {L\"{u}, Guangshi},
      TITLE = {Exponential sums with {F}ourier coefficients of automorphic
@@ -925,6 +935,23 @@ MRREVIEWER = {Greg Martin},
        DOI = {10.1090/S0025-5718-2015-02925-1},
 }
 
+@Article{Li-Pan*10,
+ Author = {Li, Hongze and Pan, Hao},
+ Title = {A density version of {Vinogradov}'s three primes theorem},
+ FJournal = {Forum Mathematicum},
+ Journal = {Forum Math.},
+ ISSN = {0933-7741},
+ Volume = {22},
+ Number = {4},
+ Pages = {699--714},
+ Year = {2010},
+ Language = {English},
+ DOI = {10.1515/FORUM.2010.039},
+ Keywords = {11P32,11B75},
+ zbMATH = {5770185},
+ Zbl = {1232.11103}
+}
+
 @article {Sun*01,
     AUTHOR = {Sun, Zhi-Hong},
      TITLE = {Supplements to the theory of quartic residues},
@@ -990,6 +1017,56 @@ MRREVIEWER = {Marc Del\'eglise},
 MRREVIEWER = {Scott T. Parsell},
        DOI = {10.2140/ant.2016.10.2093},
 }
+
+@Article{Sun-Pan*19,
+ Author = {Sun, Yu-Chen and Pan, Hao},
+ Title = {The {Green}-{Tao} theorem for primes of the form {{\(x^2+y^2+1\)}}},
+ FJournal = {Monatshefte f{\"u}r Mathematik},
+ Journal = {Monatsh. Math.},
+ ISSN = {0026-9255},
+ Volume = {189},
+ Number = {4},
+ Pages = {715--733},
+ Year = {2019},
+ Language = {English},
+ DOI = {10.1007/s00605-018-1245-0},
+ Keywords = {11B25,11B30,11N32,11P32,11N36},
+ zbMATH = {7082907},
+ Zbl = {1431.11022}
+}
+
+@Article{Mirek*15,
+ Author = {Mirek, Mariusz},
+ Title = {Roth's theorem in the {Piatetski}-{Shapiro} primes},
+ FJournal = {Revista Matem{\'a}tica Iberoamericana},
+ Journal = {Rev. Mat. Iberoam.},
+ ISSN = {0213-2230},
+ Volume = {31},
+ Number = {2},
+ Pages = {617--656},
+ Year = {2015},
+ Language = {English},
+ DOI = {10.4171/RMI/848},
+ Keywords = {11P32,11L03},
+ zbMATH = {6496476},
+ Zbl = {1337.11069}
+}
+@Article{Shen*16,
+ Author = {Shen, Quanli},
+ Title = {The ternary {Goldbach} problem with primes in positive density sets},
+ FJournal = {Journal of Number Theory},
+ Journal = {J. Number Theory},
+ ISSN = {0022-314X},
+ Volume = {168},
+ Pages = {334--345},
+ Year = {2016},
+ Language = {English},
+ DOI = {10.1016/j.jnt.2016.04.018},
+ Keywords = {11P32,11B05},
+ zbMATH = {6599785},
+ Zbl = {1396.11120}
+}
+
 @article {Shao*14a,
     AUTHOR = {Shao, Xuancheng},
      TITLE = {A density version of the {V}inogradov three primes theorem},
@@ -12252,6 +12329,23 @@ MRREVIEWER = {Don Redmond},
   File                     = {:/home/ramare/tex/Other/Kadiri/AA7329.pdf:PDF}
 }
 
+@article {Kadiri*18,
+    AUTHOR = {Kadiri, Habiba},
+     TITLE = {Explicit zero-free regions for {D}irichlet {$L$}-functions},
+   JOURNAL = {Mathematika},
+  FJOURNAL = {Mathematika. A Journal of Pure and Applied Mathematics},
+    VOLUME = {64},
+      YEAR = {2018},
+    NUMBER = {2},
+     PAGES = {445--474},
+      ISSN = {0025-5793},
+   MRCLASS = {11M26 (11M06)},
+  MRNUMBER = {3798607},
+MRREVIEWER = {Keiju Sono},
+       DOI = {10.1112/S0025579318000037},
+}
+		
+
 @Article{Kadiri*12,
   Title                    = {Explicit zero-free regions for {D}edekind zeta functions},
   Author                   = {H. Kadiri},
@@ -13925,6 +14019,55 @@ MRREVIEWER = {J. H. Jordan},
   Mrnumber                 = {2855723}
 }
 
+@article {Louboutin*17,
+    AUTHOR = {Louboutin, St\'{e}phane R.},
+     TITLE = {Simple zeros of {D}edekind zeta functions},
+   JOURNAL = {Funct. Approx. Comment. Math.},
+  FJOURNAL = {Uniwersytet im. Adama Mickiewicza w Poznaniu. Wydzia\l 
+              Matematyki i Informatyki. Functiones et Approximatio
+              Commentarii Mathematici},
+    VOLUME = {56},
+      YEAR = {2017},
+    NUMBER = {1},
+     PAGES = {109--116},
+      ISSN = {0208-6573},
+   MRCLASS = {11R42 (11R29)},
+  MRNUMBER = {3629014},
+MRREVIEWER = {Soun-Hi Kwon},
+       DOI = {10.7169/facm/1598}
+}
+@article {Louboutin*15b,
+    AUTHOR = {Louboutin, St\'{e}phane R.},
+     TITLE = {Real zeros of {D}edekind zeta functions},
+   JOURNAL = {Int. J. Number Theory},
+  FJOURNAL = {International Journal of Number Theory},
+    VOLUME = {11},
+      YEAR = {2015},
+    NUMBER = {3},
+     PAGES = {843--848},
+      ISSN = {1793-0421},
+   MRCLASS = {11R42 (11R29)},
+  MRNUMBER = {3327846},
+MRREVIEWER = {Soun-Hi Kwon},
+       DOI = {10.1142/S1793042115500463}
+}
+@article {Ramare*13a,
+    AUTHOR = {Ramar\'{e}, Olivier and Viswanadham, G. K.},
+     TITLE = {Modular ternary additive problems with irregular or prime
+              numbers},
+      NOTE = {English version published in Proc. Steklov Inst. Math.
+              {{\bf{3}}14} (2021), no. 1, 203--237},
+   JOURNAL = {Tr. Mat. Inst. Steklova},
+  FJOURNAL = {Trudy Matematicheskogo Instituta Imeni V. A. Steklova},
+    VOLUME = {314},
+      YEAR = {2021},
+    NUMBER = {Analiticheskaya i Kombinatornaya Teoriya Chisel},
+     PAGES = {211--247},
+      ISSN = {0371-9685},
+   MRCLASS = {11L20 (11L07 11N13)},
+  MRNUMBER = {4324091},
+       DOI = {10.4213/tm4191},
+}	
 @Article{Louboutin*13,
   Title                    = {An explicit lower bound on moduli of {D}ichlet {$L$}-functions at $s=1$},
   Author                   = {S. Louboutin},
@@ -16946,15 +17089,6 @@ MRREVIEWER = {Paul T. Bateman},
   MRNUMBER = {411},
 MRREVIEWER = {A. E. Ingham},
 }
-@Article{Ramare*13a,
-  Title                    = {Modular Ternary Additive Problems with Irregular or Prime Numbers},
-  Author                   = {O. {Ramar\'e} and G. K. Viswanadham},
-  Journal                  = {Proc. Steklov Inst. Math.},
-  Year                     = {2021},
-  Pages                    = {211-247},
-  Note ={Volume dedicated to I.M. Vinogradov},
-  Volume ={314}
-  }
 
 @Article{Ramare-Kasi*21b,
   Title                    = {Exponential sums over primes with multiplicative  coefficients},
