--- a/Latex/Art10.tex
+++ b/Latex/Art10.tex
@@ -386,14 +386,14 @@ Corollary 3.4 of
 in the next one.
 
 \par 
-\begin{thm}{Theorem (2018)}
+\begin{thm}{Theorem (2019)}
 
   When $x > 1$, we have
-$$
+$\displaystyle
 \sum_{n\le x}\mu^2(n)
 =\frac{6}{\pi^2}x
 +O^*(1.06\sqrt{x/\log x}).
-  $$
+  $
 \end{thm}
 
 
@@ -417,7 +417,7 @@ In Theorem 3.2 and Corollary 3.3 of
 we find the next result.
 
 \par 
-\begin{thm}{Theorem (2018)}
+\begin{thm}{Theorem (2019)}
 
   When $x \ge 3475$, we have
 $$
