--- a/Latex/Art06.tex
+++ b/Latex/Art06.tex
@@ -280,7 +280,7 @@ contains the next result.
 \begin{thm}{Theorem (2021)}
 
     Let $\chi$ be a Dirichlet character of conductor $q > 1$.
-For $T\ge 5/7$ and $\ell= \log\frac{q(T+2)}{2\pi} > 1.567, we have
+For $T\ge 5/7$ and $\ell= \log\frac{q(T+2)}{2\pi} > 1.567$, we have
 $$
 N(T,\chi)=\sum_{\substack{\rho,\\ 0 < \gamma\le T}} 1=
             \frac{T}{\pi}\log\frac{qT}{2\pi}-\frac{T}{\pi}+\frac{\chi(-1)}{4}
