--- a/Biblio/biblio.tex
+++ b/Biblio/biblio.tex
@@ -303,6 +303,9 @@
 \nocite{Kadiri*05-2}
 \nocite{Trudgian*11}
 \nocite{Kadiri-Ng*12}
+\nocite{Reyna*11}
+\nocite{Gabcke*79}
+\nocite{Kadiri*13}
 \nocite{Rademacher*59}
 \nocite{Trudgian*13}
 \nocite{Lehman*70}
@@ -330,6 +333,7 @@
 \nocite{Trudgian*13}
 \nocite{Hasanalizade-Shen-Wong*22}
 \nocite{Bennett-Martin-OBryant-Rechnitzer*21}
+\nocite{Kadiri*13}
 \nocite{Helgott*17u}
 \nocite{Bastion-Rogalaski*02}
 \nocite{Ramare*13d}
