--- a/Biblio/Local-TME-EMT.bib
+++ b/Biblio/Local-TME-EMT.bib
@@ -17521,7 +17521,22 @@ MRREVIEWER = {A. I. Vinogradov},
   Mrreviewer               = {Koichi Kawada},
   Url                      = {http://dx.doi.org/10.1360/03ys0341}
 }
-
+@article {Reyna*11,
+    AUTHOR = {Arias de Reyna, J.},
+     TITLE = {High precision computation of {R}iemann's zeta function by the
+              {R}iemann-{S}iegel formula, {I}},
+   JOURNAL = {Math. Comp.},
+  FJOURNAL = {Mathematics of Computation},
+    VOLUME = {80},
+      YEAR = {2011},
+    NUMBER = {274},
+     PAGES = {995--1009},
+      ISSN = {0025-5718,1088-6842},
+   MRCLASS = {11M06 (11Y35 65E05)},
+  MRNUMBER = {2772105},
+MRREVIEWER = {Francesco\ Sica},
+       DOI = {10.1090/S0025-5718-2010-02426-3},
+}
 @Article{Reyna-Lune*11,
   Title                    = {A proof of a trigonometric inequality. {A} glimpse inside the mathematical kitchen},
   Author                   = {{J.} Arias de Reyna and {J.} van de Lune},
