--- a/Latex/Art06.tex
+++ b/Latex/Art06.tex
@@ -35,7 +35,7 @@ proves the following.
 \par 
 \begin{thm}{Theorem (2013)}
 
-  When $t > t_0 > 0^$, $c > 1/(2\pi)$ and $s = \sigma +it$ with
+  When $t > t_0 > 0$, $c > 1/(2\pi)$ and $s = \sigma +it$ with
   $\sigma\ge 1/2$, we have
   $$
   \zeta(s)
