--- a/Biblio/biblio.tex
+++ b/Biblio/biblio.tex
@@ -22,6 +22,9 @@
 \nocite{Louboutin*03}
 \nocite{Granville-Ramare*96}
 \nocite{Daboussi-Rivat*01}
+\nocite{Cheng-Graham*04}
+\nocite{Hiary*16}
+\nocite{Granville-Ramare*98}
 \nocite{Filaseta*90}
 \nocite{Filaseta-Trifonov*96}
 \nocite{Huxley*96}
