--- a/Latex/Art05.tex
+++ b/Latex/Art05.tex
@@ -21,13 +21,134 @@ Collecting references:
  
 
 
+\par 
+\section{Bounds with the first derivative}
+
+
+We start with the Kusmin-Landau Lemma.
+\par 
+\begin{thm}{Theorem}
+
+    Let $f$ be a function over $[a, b]$ such that $f'$ is monotonic
+    and satisfies $\theta \le f'(u)\le 1-\theta$ for some $\theta
+    \in(0,1/2]$. Then
+    $$
+    \biggl|\sum_{a\le n\le b} e(f(n))\biggr|
+    \le
+    \cot\frac{\pi\theta}{2}\le \frac{2}{\pi \theta}.
+    $$
+\end{thm}
+
+
+
+\par 
+\section{Bounds with the second derivative}
+
+
+  Here is a corrected version of Lemma 3 of
+  \cite{Cheng-Graham*04}.
+\par 
+\begin{thm}{Theorem (2013)}
+
+  Let $f$ be a real-valued function with two continuous derivatives
+  on $[N+1, N+L]$. Suppose there are $W > 1$ and $\lambda > 1$ such
+  that $1 \le W |f'''(x)| \le \lambda$ for every $x\in [N+1,
+  N+L]$. Then, for any $\eta > 0$, we have
+  $$
+  \biggl|\sum_{n= N+1}^{N+L}
+  \exp( 2i\pi f(n)) \biggr|
+  \le 2\biggl(\frac{L \lambda}{W} +2\biggr)
+  \biggl(2\sqrt{\frac{W}{\pi}} + 1\biggr).
+  $$
+\end{thm}
+
+
+
+  
+\par 
+\section{Bounds with the first derivative}
+
+
+Here is Lemma 1.2 of
+\cite{Hiary*16}.
+\par 
+\begin{thm}{Theorem (2013)}
+
+  Let $f$ be a real-valued function with three continuous derivatives
+  on $[N+1, N+L]$. Suppose there are $W > 1$ and $\lambda > 1$ such
+  that $1 \le W |f'''(x)| \le \lambda$ for every $x\in [N+1,
+  N+L]$. Then, for any $\eta > 0$, we have
+  $$
+  \biggl|\sum_{n= N+1}^{N+L}
+  \exp( 2i\pi f(n)) \biggr|^2
+  \le (LW^{-1/3} +\eta) (\alpha L + \beta W^{2/3})
+  $$
+  where
+  $$
+  \alpha = \frac{1}{\eta} +\frac{64\lambda}{75}
+  \sqrt{\eta + W^{-1/3}}+\frac{\lambda\eta}{W^{1/3}}
+  +\frac{\lambda}{W^{2/3}},
+  $$
+  and
+  $$
+  \beta = \frac{65}{15\sqrt{eta}} + \frac{3}{W^{1/3}}.
+  $$
+\end{thm}
+
+
+  
+\par 
+\section{Iterated Van der Corput Inequality}
+
+
+During the proof of Lemma 8.6 in 
+  \cite{Granville-Ramare*98},
+  one finds the next inequality.
+\par 
+\begin{thm}{Theorem (2013)}
+
+  Let $f$ be a real-valued function with $k+1$ continuous derivatives
+  on $(A, B]$ and let $N$ be a lower bound for the number of integers
+  in $(A,B]$. The quantity
+  $$
+  \biggl|\frac{1}{8N}
+  \sum_{A < n\le B} \exp(2 i \pi f(n)\biggr|^{2^k}
+	    $$
+	    is bounded above by
+	    $$
+	    \frac{1}{8}\biggl(
+	    \frac{1}{Q} + \frac{1}{Q^{2-2^{1-k}}}
+	    \sum_{r_1=1}^{Q2^{-0}}
+	    \sum_{r_2=1}^{Q2^{-1}}
+	    \cdots
+	    \sum_{r_k=1}^{Q2^{-k+1}}
+	    \biggl|
+	    \frac{1}{N}
+	    \sum_{A < n \le B-r_1-r_2-\cdots-r_k}
+		    \exp(2i\pi f_{r_1,\cdots,r_k}(n)   
+	    \biggr|
+	    \biggr)
+		      $$
+		      where the function $f_{r_1,\cdots,r_k}$ satifies
+		      $$
+		      \forall t, \exists y\in[t, t+r_1+\cdots+r_k],
+		      f'_{r_1,\cdots, r_k}=r_1r_2\cdots r_k f^{(k+1)}(y).
+		      $$
+\end{thm}
+
+
+
+
+
+
+
 
 
 
 
 
   
-\begin{flushright}\small\sl{}   Last updated on July 14th, 2012, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on July 12th, 2023, by Olivier Ramar\'e
  \end{flushright}
 
 
