--- a/Latex/Art05.tex
+++ b/Latex/Art05.tex
@@ -12,7 +12,6 @@ Corresponding html file: \texttt{../Articles/Art05.html}
 
 
 Collecting references:
-\cite{Granville-Ramare*96},
 \cite{Daboussi-Rivat*01}.
 
 
@@ -53,7 +52,7 @@ We start with the Kusmin-Landau Lemma.
   Let $f$ be a real-valued function with two continuous derivatives
   on $[N+1, N+L]$. Suppose there are $W > 1$ and $\lambda > 1$ such
   that $1 \le W |f'''(x)| \le \lambda$ for every $x\in [N+1,
-  N+L]$. Then, for any $\eta > 0$, we have
+  N+L]$. Then we have
   $$
   \biggl|\sum_{n= N+1}^{N+L}
   \exp( 2i\pi f(n)) \biggr|
@@ -66,7 +65,7 @@ We start with the Kusmin-Landau Lemma.
 
   
 \par 
-\section{Bounds with the first derivative}
+\section{Bounds with the third derivative}
 
 
 Here is Lemma 1.2 of
@@ -91,7 +90,7 @@ Here is Lemma 1.2 of
   $$
   and
   $$
-  \beta = \frac{65}{15\sqrt{eta}} + \frac{3}{W^{1/3}}.
+  \beta = \frac{65}{15\sqrt{\eta}} + \frac{3}{W^{1/3}}.
   $$
 \end{thm}
 
@@ -102,7 +101,7 @@ Here is Lemma 1.2 of
 
 
 During the proof of Lemma 8.6 in 
-  \cite{Granville-Ramare*98},
+  \cite{Granville-Ramare*96},
   one finds the next inequality.
 \par 
 \begin{thm}{Theorem (2013)}
@@ -131,8 +130,8 @@ During the proof of Lemma 8.6 in
 		      $$
 		      where the function $f_{r_1,\cdots,r_k}$ satifies
 		      $$
-		      \forall t, \exists y\in[t, t+r_1+\cdots+r_k],
-		      f'_{r_1,\cdots, r_k}=r_1r_2\cdots r_k f^{(k+1)}(y).
+		      \forall t,\,\, \exists y\in[t, t+r_1+\cdots+r_k],
+		      \,\,f'_{r_1,\cdots, r_k}(t)=r_1r_2\cdots r_k f^{(k+1)}(y).
 		      $$
 \end{thm}
 
