--- a/Latex/Art05.tex
+++ b/Latex/Art05.tex
@@ -124,14 +124,14 @@ During the proof of Lemma 8.6 in
 	    \biggl|
 	    \frac{1}{N}
 	    \sum_{A < n \le B-r_1-r_2-\cdots-r_k}
-		    \exp(2i\pi f_{r_1,\cdots,r_k}(n)   
+		    \exp(\pm 2i\pi f_{r_1,\cdots,r_k}(n)   
 	    \biggr|
 	    \biggr)
 		      $$
 		      where the function $f_{r_1,\cdots,r_k}$ satifies
 		      $$
-		      \forall t,\,\, \exists y\in[t, t+r_1+\cdots+r_k],
-		      \,\,f'_{r_1,\cdots, r_k}(t)=r_1r_2\cdots r_k f^{(k+1)}(y).
+		      \forall t,\ \exists y\in[t, t+r_1+\cdots+r_k],
+		      \ f'_{r_1,\cdots, r_k}(t)=r_1r_2\cdots r_k f^{(k+1)}(y).
 		      $$
 \end{thm}
 
