--- a/Latex/Art05.tex
+++ b/Latex/Art05.tex
@@ -47,7 +47,7 @@ We start with the Kusmin-Landau Lemma.
   Here is a corrected version of Lemma 3 of
   \cite{Cheng-Graham*04}.
 \par 
-\begin{thm}{Theorem (2013)}
+\begin{thm}{Theorem (2004)}
 
   Let $f$ be a real-valued function with two continuous derivatives
   on $[N+1, N+L]$. Suppose there are $W > 1$ and $\lambda > 1$ such
@@ -71,7 +71,7 @@ We start with the Kusmin-Landau Lemma.
 Here is Lemma 1.2 of
 \cite{Hiary*16}.
 \par 
-\begin{thm}{Theorem (2013)}
+\begin{thm}{Theorem (2016)}
 
   Let $f$ be a real-valued function with three continuous derivatives
   on $[N+1, N+L]$. Suppose there are $W > 1$ and $\lambda > 1$ such
@@ -104,7 +104,7 @@ During the proof of Lemma 8.6 in
   \cite{Granville-Ramare*96},
   one finds the next inequality.
 \par 
-\begin{thm}{Theorem (2013)}
+\begin{thm}{Theorem (1996)}
 
   Let $f$ be a real-valued function with $k+1$ continuous derivatives
   on $(A, B]$ and let $N$ be a lower bound for the number of integers
@@ -137,7 +137,38 @@ During the proof of Lemma 8.6 in
 
 
 
+\par 
+\section{Explicit Poisson Formula}
 
+
+Here is a consequence of the main theorem of
+bibref(Karatsuba-Korolev*07).
+\par 
+\begin{thm}{Theorem (2007)}
+
+    Suppose $f'$ is decreasing on $[N+1,N+L]$ and set
+    $f'(N+L)=\alpha$ and $f'(N)=\beta$.
+    For integer $\nu\in(\alpha, \beta]$, let $x_\nu$ be the solution
+    to $f'(x)=\nu$. Suppose further that
+$\lambda_2\le |f''(x)|\le h_2\lambda_2$ and
+    $\lambda_3\le |f'''(x)|\le h_3\lambda_3$. Then
+    $$
+    \sum_{n=N+1}^{N+L} \exp(2i\pi f(n))
+    =
+    \sum_{\alpha < \nu\le \beta}
+		   \frac{\exp(2i\pi (f(x_\nu)-\nu x_\nu-1/8))}{\sqrt{f''(x_\nu)}}
+		   +\mathcal{E}
+    $$
+		   where
+		   $$
+		   \mathcal{E}
+		   \le \frac{40}{\sqrt{\pi}}\lambda^{-1/2}
+		   + \frac{3+2h_2}{\pi} \log(\beta-\alpha+2)
+		   + 2.9 h_2h_3^{1/5}L(\lambda_2\lambda_3)^{1/5}
+		   +1.9.
+		   $$
+		   
+\end{thm}
 
 
 
