--- a/Latex/Local-TME-EMT.bib
+++ b/Latex/Local-TME-EMT.bib
@@ -12,7 +12,21 @@
    MRCLASS = {11N25},
   MRNUMBER = {4390731},
 }
-		
+@article {Karatsuba-Korolev*07,
+    AUTHOR = {Karatsuba, A. A. and Korol\"{e}v, M. A.},
+     TITLE = {Approximation of a trigonometric sum by a shorter one},
+   JOURNAL = {Dokl. Akad. Nauk},
+  FJOURNAL = {Rossi\u{\i}skaya Akademiya Nauk. Doklady Akademii Nauk},
+    VOLUME = {412},
+      YEAR = {2007},
+    NUMBER = {2},
+     PAGES = {159--161},
+      ISSN = {0869-5652},
+   MRCLASS = {11L03 (11L07)},
+  MRNUMBER = {2451956},
+MRREVIEWER = {Tatjana\ L.\ Todorova},
+       DOI = {10.1134/S1064562407010115},
+}		
 @book {Kaniuth*09,
     AUTHOR = {Kaniuth, Eberhard},
      TITLE = {A course in commutative {B}anach algebras},
