--- a/Latex/Art05.tex
+++ b/Latex/Art05.tex
@@ -148,7 +148,7 @@ bibref(Karatsuba-Korolev*07).
 \begin{thm}{Theorem (2007)}
 
     Suppose $f'$ is decreasing on $[N+1,N+L]$ and set
-    $f'(N+L)=\alpha$ and $f'(N)=\beta$.
+    $f'(N+L)=\alpha$ and $f'(N) = \beta$.
     For integer $\nu\in(\alpha, \beta]$, let $x_\nu$ be the solution
     to $f'(x)=\nu$. Suppose further that
 $\lambda_2\le |f''(x)|\le h_2\lambda_2$ and
@@ -162,7 +162,7 @@ $\lambda_2\le |f''(x)|\le h_2\lambda_2$ and
     $$
 		   where
 		   $$
-		   \mathcal{E}
+		   |\mathcal{E}|
 		   \le \frac{40}{\sqrt{\pi}}\lambda^{-1/2}
 		   + \frac{3+2h_2}{\pi} \log(\beta-\alpha+2)
 		   + 2.9 h_2h_3^{1/5}L(\lambda_2\lambda_3)^{1/5}
