--- a/Latex/Art05.tex
+++ b/Latex/Art05.tex
@@ -45,7 +45,7 @@ We start with the Kusmin-Landau Lemma.
 
 
   Here is a corrected version of Lemma 3 of
-  \cite{Cheng-Graham*04}.
+  \cite{Cheng-Graham*01}.
 \par 
 \begin{thm}{Theorem (2004)}
 
@@ -131,7 +131,7 @@ During the proof of Lemma 8.6 in
 		      where the function $f_{r_1,\cdots,r_k}$ satisfies
 		      $$
 		      \forall t,\ \exists y\in[t, t + r_1 + \cdots + r_k],
-		      \
+		      \quad
 		      f'_{r_1,\cdots, r_k}(t) = r_1r_2\cdots r_k f^{(k+1)}(y).
 		      $$
 \end{thm}
@@ -143,7 +143,8 @@ During the proof of Lemma 8.6 in
 
 
 Here is a consequence of the main theorem of
-bibref(Karatsuba-Korolev*07).
+bibref(Karatsuba-Korolev*07)
+.
 \par 
 \begin{thm}{Theorem (2007)}
 
