--- a/Latex/Art05.tex
+++ b/Latex/Art05.tex
@@ -111,7 +111,7 @@ During the proof of Lemma 8.6 in
   in $(A,B]$. The quantity
   $$
   \biggl|\frac{1}{8N}
-  \sum_{A < n\le B} \exp(2 i \pi f(n)\biggr|^{2^k}
+  \sum_{A < n\le B} \exp(2 i \pi f(n))\biggr|^{2^k}
 	    $$
 	    is bounded above by
 	    $$
@@ -124,7 +124,7 @@ During the proof of Lemma 8.6 in
 	    \biggl|
 	    \frac{1}{N}
 	    \sum_{A < n \le B-r_1-r_2-\cdots-r_k}
-		    \exp(\pm 2i\pi f_{r_1,\cdots,r_k}(n)   
+		    \exp(\pm 2i\pi f_{r_1,\cdots,r_k}(n))   
 	    \biggr|
 	    \biggr)
 		      $$
