--- a/Biblio/biblio.tex
+++ b/Biblio/biblio.tex
@@ -350,6 +350,10 @@
 \nocite{Louboutin*98}
 \nocite{Louboutin*13}
 \nocite{Louboutin*15}
+\nocite{Daboussi-Rivat*01}
+\nocite{Cheng-Graham*01}
+\nocite{Hiary*16}
+\nocite{Granville-Ramare*96}
 \bibliographystyle{authordate1}
 \bibliography{Local-TME-EMT}
 
