--- a/Latex/Art05.tex
+++ b/Latex/Art05.tex
@@ -28,7 +28,7 @@ We start with the Kusmin-Landau Lemma.
 \par 
 \begin{thm}{Theorem}
 
-    Let $f$ be a function over $[a, b]$ such that $f'$ is monotonic
+    Let $f$ be a function over $[a, b]$ such that $f^\prime$ is monotonic
     and satisfies $\theta \le f^\prime(u)\le 1-\theta$ for some $\theta
     \in(0,1/2]$. Then
     $$
@@ -143,7 +143,7 @@ During the proof of Lemma 8.6 in
 
 
 Here is a consequence of the main theorem of
-bibref(Karatsuba-Korolev*07)
+\bibref(Karatsuba-Korolev*07)
 .
 \par 
 \begin{thm}{Theorem (2007)}
