--- a/Latex/Art05.tex
+++ b/Latex/Art05.tex
@@ -143,7 +143,7 @@ During the proof of Lemma 8.6 in
 
 
 Here is a consequence of the main theorem of
-\bibref(Karatsuba-Korolev*07)
+  \cite{Karatsuba-Korolev*07}
 .
 \par 
 \begin{thm}{Theorem (2007)}
