--- a/Biblio/biblio.tex
+++ b/Biblio/biblio.tex
@@ -24,6 +24,7 @@
 \nocite{Cheng-Graham*01}
 \nocite{Hiary*16}
 \nocite{Granville-Ramare*96}
+\nocite{Karatsuba-Korolev*07}
 \nocite{Filaseta*90}
 \nocite{Filaseta-Trifonov*96}
 \nocite{Huxley*96}
