--- a/Latex/Art05.tex
+++ b/Latex/Art05.tex
@@ -45,7 +45,9 @@ We start with the Kusmin-Landau Lemma.
 
 
   Here is a corrected version of Lemma 3 of
-  \cite{Cheng-Graham*01}.
+  \cite{Cheng-Graham*01},
+  see Lemma 2.3 of
+  \cite{Patel*22}.
 \par 
 \begin{thm}{Theorem (2004)}
 
@@ -69,7 +71,10 @@ We start with the Kusmin-Landau Lemma.
 
 
 Here is Lemma 1.2 of
-\cite{Hiary*16}.
+  \cite{Hiary*16}.
+  See Lemma 2.3
+  \cite{Patel*22}.
+
 \par 
 \begin{thm}{Theorem (2016)}
 
@@ -97,6 +102,13 @@ Here is Lemma 1.2 of
 
   
 \par 
+\section{Bounds with higher derivatives}
+
+
+  See Lemma 3.1 and 3.2 of
+    \cite{Patel*22}.
+
+  \par 
 \section{Iterated Van der Corput Inequality}
 
 
@@ -144,7 +156,7 @@ During the proof of Lemma 8.6 in
 
 Here is a consequence of the main theorem of
   \cite{Karatsuba-Korolev*07}
-.
+  .
 \par 
 \begin{thm}{Theorem (2007)}
 
