--- a/Biblio/biblio.tex
+++ b/Biblio/biblio.tex
@@ -22,7 +22,10 @@
 \nocite{Louboutin*03}
 \nocite{Daboussi-Rivat*01}
 \nocite{Cheng-Graham*01}
+\nocite{Patel*22}
 \nocite{Hiary*16}
+\nocite{Patel*22}
+\nocite{Patel*22}
 \nocite{Granville-Ramare*96}
 \nocite{Karatsuba-Korolev*07}
 \nocite{Filaseta*90}
@@ -351,10 +354,6 @@
 \nocite{Louboutin*98}
 \nocite{Louboutin*13}
 \nocite{Louboutin*15}
-\nocite{Daboussi-Rivat*01}
-\nocite{Cheng-Graham*01}
-\nocite{Hiary*16}
-\nocite{Granville-Ramare*96}
 \bibliographystyle{authordate1}
 \bibliography{Local-TME-EMT}
 
