--- a/Latex/Local-TME-EMT.bib
+++ b/Latex/Local-TME-EMT.bib
@@ -12,6 +12,22 @@
    MRCLASS = {11N25},
   MRNUMBER = {4390731},
 }
+@article {Patel*22,
+    AUTHOR = {Patel, Dhir},
+     TITLE = {An explicit upper bound for {$|\zeta (1+it) |$}},
+   JOURNAL = {Indag. Math. (N.S.)},
+  FJOURNAL = {Koninklijke Nederlandse Akademie van Wetenschappen.
+              Indagationes Mathematicae. New Series},
+    VOLUME = {33},
+      YEAR = {2022},
+    NUMBER = {5},
+     PAGES = {1012--1032},
+      ISSN = {0019-3577,1872-6100},
+   MRCLASS = {11M06},
+  MRNUMBER = {4470692},
+MRREVIEWER = {Athanasios\ Sourmelidis},
+       DOI = {10.1016/j.indag.2022.04.007},
+}
 @article {Karatsuba-Korolev*07,
     AUTHOR = {Karatsuba, A. A. and Korol\"{e}v, M. A.},
      TITLE = {Approximation of a trigonometric sum by a shorter one},
