--- a/Biblio/biblio.tex
+++ b/Biblio/biblio.tex
@@ -330,6 +330,7 @@
 \nocite{Backlund*18}
 \nocite{Backlund*14}
 \nocite{Trudgian*12b}
+\nocite{Patel*22}
 \nocite{Ford*02}
 \nocite{Kulas*94}
 \nocite{Backlund*14}
