--- a/Latex/Art06.tex
+++ b/Latex/Art06.tex
@@ -192,13 +192,28 @@ of  \cite{Backlund*18}
 
 
 
-On the line $\Re s=1$, one can rely on
-\cite{Trudgian*12b}.
+On the line $\Re s=1$, 
+\cite{Trudgian*12b}
+establishes the next result.
 \par 
 \begin{thm}{Theorem (2012)}
 
   When $t\ge 3$, we have $|\zeta(1+it)|\le\tfrac34 \log t$.
 \end{thm}
+
+The paper
+\cite{Patel*22}
+proves the next bound.
+\par 
+\begin{thm}{Theorem (2022)}
+
+  When $t\ge 3$, we have
+  $$
+  |\zeta(1+it)|\le\min(\tfrac34 \log t,
+  \frac12\log t + 1.93, \tfrac15 \log t + 44.02).
+  $$
+\end{thm}
+
 
 
 Asymptotically better bounds are available since the huge work of
