--- a/Latex/Art06.tex
+++ b/Latex/Art06.tex
@@ -208,10 +208,10 @@ proves the next bound.
 \begin{thm}{Theorem (2022)}
 
   When $t\ge 3$, we have
-  $$
-  |\zeta(1+it)|\le\min(\tfrac34 \log t,
-  \frac12\log t + 1.93, \tfrac15 \log t + 44.02).
-  $$
+  $
+  |\zeta(1+it)|\le\min\bigl(\tfrac34 \log t,
+  \tfrac12\log t + 1.93, \tfrac15 \log t + 44.02\bigr).
+  $
 \end{thm}
 
 
