--- a/Biblio/Local-TME-EMT.bib
+++ b/Biblio/Local-TME-EMT.bib
@@ -19509,13 +19509,20 @@ Article{Trudgian*12,
   Mrnumber                 = {2869049},
   Mrreviewer               = {Haseo Ki},
 }
-
-@Article{Trudgian*12b,
-  Title                    = {A new upper bound for $|\zeta(1+it)|$},
-  Author                   = {T. Trudgian},
-  Year                     = {2012},
-  Note                     = {\url{http://arxiv.org/abs/1210.6743}},
-  Page                     = {5pp}
+@article {Trudgian*12b,
+    AUTHOR = {Trudgian, Timothy},
+     TITLE = {A new upper bound for {$|\zeta(1+it)|$}},
+   JOURNAL = {Bull. Aust. Math. Soc.},
+  FJOURNAL = {Bulletin of the Australian Mathematical Society},
+    VOLUME = {89},
+      YEAR = {2014},
+    NUMBER = {2},
+     PAGES = {259--264},
+      ISSN = {0004-9727,1755-1633},
+   MRCLASS = {11M06},
+  MRNUMBER = {3182661},
+MRREVIEWER = {St\'{e}phane\ R.\ Louboutin},
+       DOI = {10.1017/S0004972713000415},
 }
 
 @Article{Trudgian*11,
