--- a/Biblio/Local-TME-EMT.bib
+++ b/Biblio/Local-TME-EMT.bib
@@ -12126,6 +12126,21 @@ MRREVIEWER = {S. L. Segal},
   Mrreviewer               = {G. Greaves}
 }
 
+@article {Johnston-Yang*23,
+    AUTHOR = {Johnston, Daniel R. and Yang, Andrew},
+     TITLE = {Some explicit estimates for the error term in the prime number
+              theorem},
+   JOURNAL = {J. Math. Anal. Appl.},
+  FJOURNAL = {Journal of Mathematical Analysis and Applications},
+    VOLUME = {527},
+      YEAR = {2023},
+    NUMBER = {2},
+     PAGES = {Paper No. 127460},
+      ISSN = {0022-247X,1096-0813},
+   MRCLASS = {11N05 (11M26 11Y35 11Y70)},
+  MRNUMBER = {4601071},
+       DOI = {10.1016/j.jmaa.2023.127460},
+}
 @Article{Johnsen*71,
   Title                    = {On the large sieve method in $GF[q,x]$},
   Author                   = {J. Johnsen},
