--- a/Biblio/biblio.tex
+++ b/Biblio/biblio.tex
@@ -238,6 +238,7 @@
 \nocite{Kadiri-Faber*18}
 \nocite{Kadiri*13}
 \nocite{Platt-Trudgian*21b}
+\nocite{Johnston-Yang*23}
 \nocite{Panaitopol*00}
 \nocite{Axler*16}
 \nocite{Ramare*12-1}
