--- a/Latex/Art01.tex
+++ b/Latex/Art01.tex
@@ -164,6 +164,24 @@ one find the following estimate
   x)^{0.52}\exp-\sqrt{\frac{\log x}{5.573412}}\;.$
 
 
+The paper
+\cite{Johnston-Yang*23}
+further proves in Theorem 1.1 the next estimate.
+\par 
+Theorem (2023)
+
+  
+When $x\ge 2$, we have
+  $\biggl|\frac{\psi(x)-x}{x}\biggr|\le 9.39\,(\log
+x)^{1.51}\exp-0.8274\sqrt{\log x}\;.$
+\par 
+  When $x\ge 23$, we have
+  $\biggl|\frac{\psi(x)-x}{x}\biggr|\le 0.026\,(\log
+x)^{1.801}\exp-0.1853\frac{(\log x)^{3/5}}{(\log\log x)^{1/5}}\;.$
+
+
+Several estimates are also provided for $\psi(x)$, $\pi(x)$ and $\vartheta(x)$.
+
 
 Refined bounds for $\pi(x)$ are to be found in
 \cite{Panaitopol*00}
