--- a/Latex/Art08.tex
+++ b/Latex/Art08.tex
@@ -318,7 +318,8 @@ by quote a corollary.
 
 The LMFDB\footnote{\url{http://www.lmfdb.org}} database contains the first zeros
 of many $L$-functions. A part of Andrew Odlyzko's 
-website\footnote{\url{http://www.dtc.umn.edu/~odlyzko/zeta_tables/index.html}}
+
+website\footnote{\url{http://www.dtc.umn.edu/~odlyzko/zeta_tables/index.html#GlobalIndex}}
 contains extensive tables concerning zeroes of the Riemann zeta function.
 
 
