--- a/Latex/Art10.tex
+++ b/Latex/Art10.tex
@@ -29,7 +29,8 @@ via their Dirichlet series is known as the Convolution method and is for
 instance decribed at length in 
 \cite{Berment-Ramare*12}, and in
 the course that can be found 
-here\footnote{\url{https://ramare-olivier.github.io/CoursNouakchott/index.html}}.
+
+here\footnote{\url{https://ramare-olivier.github.io/CoursNouakchott/index.html#GlobalIndex}}.
 
 
 \begin{thm}{Theorem (1995)}
