--- a/Latex/Art10.tex
+++ b/Latex/Art10.tex
@@ -247,7 +247,7 @@ C=\frac{1}{\Gamma(\kappa+1)}
 $$
 \end{thm}
 
-
+See also here\footnote{\url{../Art14.html#Density}}.
 
 \section{Upper bounds}
 
