--- a/Biblio/Local-TME-EMT.bib
+++ b/Biblio/Local-TME-EMT.bib
@@ -391,6 +391,22 @@ MRREVIEWER = {Alisa Sedunova},
        URL =
               {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:7201650},
 }
+@article {Debaene*19,
+    AUTHOR = {Debaene, Korneel},
+     TITLE = {Explicit counting of ideals and a {B}run-{T}itchmarsh
+              inequality for the {C}hebotarev density theorem},
+   JOURNAL = {Int. J. Number Theory},
+  FJOURNAL = {International Journal of Number Theory},
+    VOLUME = {15},
+      YEAR = {2019},
+    NUMBER = {5},
+     PAGES = {883--905},
+      ISSN = {1793-0421,1793-7310},
+   MRCLASS = {11R44 (11H06 11N35)},
+  MRNUMBER = {3955839},
+MRREVIEWER = {M.\ Ram\ Murty},
+       DOI = {10.1142/S1793042119500477},
+}
 @article {Sunley*73,
     AUTHOR = {Sunley, Judith S.},
      TITLE = {Class numbers of totally imaginary quadratic extensions of
@@ -1978,17 +1994,19 @@ MRREVIEWER = {Matti Jutila},
   note = 	 {Submitted to IJNT}
 }
 @Article{Gun-Ramare-Sivaraman*22b,
-  author = 	 {Sanoli Gun and O. Ramar\'e and Jyothsnaa Sivaraman},
-  title = 	 {Counting ideals in ray classes},
-  journal = 	 {Submitted},
-  year = 	 {2022},
-  OPTkey = 	 {},
-  OPTvolume = 	 {},
-  OPTnumber = 	 {},
-  pages = 	 {21 pp.},
-  OPTmonth = 	 {},
-  note = 	 {Being finalized}
+    AUTHOR = {Gun, Sanoli and Ramar\'{e}, Olivier and Sivaraman, Jyothsnaa},
+     TITLE = {Counting ideals in ray classes},
+   JOURNAL = {J. Number Theory},
+  FJOURNAL = {Journal of Number Theory},
+    VOLUME = {243},
+      YEAR = {2023},
+     PAGES = {13--37},
+      ISSN = {0022-314X,1096-1658},
+   MRCLASS = {11R44 (11R42 11R45)},
+  MRNUMBER = {4492605},
+       DOI = {10.1016/j.jnt.2022.08.005},
 }
+
 @Article{Deshouillers-Gun-Ramare-Sivaraman*22a,
   author = 	 {Sanoli Gun, O. Ramar\'e and Jyothsnaa Sivaraman},
   title = 	 {Representing ideal classes of ray class groups by product of prime ideals of small size},
@@ -12482,6 +12500,21 @@ MRREVIEWER = {Konstantinos Draziotis},
      PAGES = {110},
    MRCLASS = {11M06},
   MRNUMBER = {3086819},
+}
+@article {Lee*22,
+    AUTHOR = {Lee, Ethan S.},
+     TITLE = {On the number of integral ideals in a number field},
+   JOURNAL = {J. Math. Anal. Appl.},
+  FJOURNAL = {Journal of Mathematical Analysis and Applications},
+    VOLUME = {517},
+      YEAR = {2023},
+    NUMBER = {1},
+     PAGES = {Paper No. 126585, 25},
+      ISSN = {0022-247X,1096-0813},
+   MRCLASS = {11R42},
+  MRNUMBER = {4469611},
+MRREVIEWER = {Krishnarjun\ Krishnamoorthy},
+       DOI = {10.1016/j.jmaa.2022.126585},
 }
 @article {Lee*21a,
     AUTHOR = {Lee, Ethan S.},
