--- a/Biblio/biblio.tex
+++ b/Biblio/biblio.tex
@@ -130,6 +130,10 @@
 \nocite{Jain-Sharma-Khale-Liu*21}
 \nocite{Rademacher*59}
 \nocite{Trudgian*13}
+\nocite{Sunley*73}
+\nocite{Lee*22}
+\nocite{Debaene*19}
+\nocite{Gun-Ramare-Sivaraman*22b}
 \nocite{Kadiri-Ng*12}
 \nocite{Trudgian*14-1}
 \nocite{Hasanalizade-Shen-Wong*21}
