--- a/Latex/Art14.tex
+++ b/Latex/Art14.tex
@@ -109,7 +109,7 @@ we find the next widely applicable estimate.
 			   $$
 \end{thm}
 
-See also here\footnote{\url{../Art10.html#asy}}.
+See also here\footnote{\url{Articles/Art10.html#asy}}.
 
 
 \section{Combinatorial sieve estimates}
