--- a/Latex/Art18.tex
+++ b/Latex/Art18.tex
@@ -40,6 +40,65 @@ $$
 
 \par 
 
+\section{Number of ideals}
+
+
+An explicit approximation of the number of ideals in a number field
+was given in the PhD memoir
+\cite{Sunley*73}
+of J.S. Sunley. It is recalled in Theorem 1.1 of
+\cite{Lee*22}
+and further refined there in Theorem 1.2.
+\par 
+\begin{thm}{Theorem (2022)}
+
+    For $x > 0$ and $n_K\ge 0$, the number $I_K(x)$ of integral ideals
+    of norm at most $x$ in the
+    number field $K$ of degree $n_K$ and discriminant $\Delta_K$ is approximated given by
+    $$
+    I_K(x)
+    =\kappa_K x
+    +\O^*\biggl(C(K)|\Delta_K|^{\frac{1}{n_K+1}}(\log|\Delta_K|)^{n_K-1}
+    x^{1-\frac{2}{n_K+1}}\biggr)
+    $$
+    where
+    $$
+    C(K)=0.17\frac{6n_K-2}{n_K-1}
+    2.26^{n_K} e^{4n_K+(26/n_K)}n_K^{n_K+(1/2)}
+    \biggl(
+    44.39\biggl(\frac{82}{1000}\biggr)^{n_K}n_K!
+    +
+    \frac{13}{n_K-1}
+    \biggr).
+    $$
+
+
+For $n_K=2$, the constant $\Delta_K$ is about $8.80\cdot 10^{11}$. The
+constant arising from Sunley's work was about $1.75\cdot 10^{30}$.
+
+An approximation not relying on the discriminant but on the regulator
+and the class number has been given in Corollary 2 of
+\cite{Debaene*19}.
+\par 
+Theorem (2019)
+
+
+  The notation being as above, we have
+  $$
+  I_K(x)=\kappa_K x
+  +O^*\biggl(n_K^{10n_K^2}
+  (\text{Reg}_Kh_K)^{1/n_K}\biggr)
+  (1+\log\text{Reg}_Kh_K)^{\frac{(n_K-1)^2}{n_K}
+  x^{1-\frac{1}{n_K}.
+  $$
+\end{thm}
+
+The reader will also find there an explicit bound of similar strength
+on the number ideals in a given ideal class. 
+The number of integral ideals in a given ray class is approximated
+explicitely following the same scheme in Theorem 1 of
+\cite{Gun-Ramare-Sivaraman*22b}.
+
 \section{Zeroes and zero-free regions }
 
 
@@ -155,7 +214,7 @@ $$
 
 
   
-\begin{flushright}\small\sl{}   Last updated on December 26th, 2022, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on July 21th, 2023, by Olivier Ramar\'e
  \end{flushright}
 
 
