--- a/Latex/Art18.tex
+++ b/Latex/Art18.tex
@@ -88,8 +88,8 @@ Theorem (2019)
   I_K(x)=\kappa_K x
   +O^*\biggl(n_K^{10n_K^2}
   (\text{Reg}_Kh_K)^{1/n_K}\biggr)
-  (1+\log\text{Reg}_Kh_K)^{\frac{(n_K-1)^2}{n_K}
-  x^{1-\frac{1}{n_K}.
+  (1+\log\text{Reg}_Kh_K)^{\frac{(n_K-1)^2}{n_K}}
+  x^{1-\frac{1}{n_K}}.
   $$
 \end{thm}
 
